[project]
name = "python-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muxammilkhan", email = "165667118+Muxammilkhan@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
]

[project.scripts]
python-uv = "python_uv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
